<resources>
    <string name="app_name">PinMoney</string>

    <string name="abNun">Zahlung ab</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_empfaenger">Empfänger</string>
    <string name="ausahlung_von">Auszahlung von Konto:</string>
    <string name="betrag">Betrag (€.Cent):</string>
    <string name="betrag_edit">0.00 €</string>
    <string name="bitte_empf_nger_ausw_hlen">Bitte Empfänger auswählen!</string>
    <string name="buchen">buchen</string>
    <string name="buchungstext">Buchungstext</string>
    <string name="button_konto">Kontoauszug</string>
    <string name="button_auszahlung">Auszahlung</string>
    <string name="button_einzahlung">Einzahlung</string>
    <string name="button_parents">Eltern</string>
    <string name="button_child">Kind</string>
    <string name="change">Ändern</string>
    <string name="change_date">Gültig ab:</string>
    <string name="close_app">Beenden</string>
    <string name="datum">Datum</string>
    <string name="date_edit">Datum</string>
    <string name="daily">täglich</string>
    <string name="days_10">10 Tage</string>
    <string name="days_30">30 Tage</string>
    <string name="days_60">60 Tage</string>
    <string name="einzahlung_auf">Einzahlung auf das Konto von:</string>
    <string name="einzahlung_hint">0.00€</string>
    <string name="empfaenger">Empfänger:</string>
    <string name="empfaenger_neu">Neuer Empfänger:</string>
    <string name="empfaenger_neu_geb_dat">Geb.Dat.:</string>
    <string name="empfaenger_name">Name:</string>
    <string name="euro">€</string>
    <string name="help">Hilfe</string>
    <string name="helpText">Über diese App: Die App ist aufgrund diveres Schwierigkeiten leider noch nicht fertig.
        Derzeit ist sie nur als Demo zu betrachten. Eine Navigation, zurück zum Hauptscreen, ist (noch) nicht anders, als über Bordmittel vorgesehen.
        Drücken Sie dazu bitte auf den Zurück Button Ihres Smartphones. Viel Vergnügen!</string>
    <string name="history_zeigen">History zeigen</string>
    <string name="impossible">Eigentlich unmöglich</string>
    <string name="insertReciver">Empfänger eintragen</string>
    <string name="konto">Konto/Empfänger wählen:</string>
    <string name="kontoWaehlen">Bitte wählen Sie ein Konto aus der Liste (Kleines Dreieck)</string>
    <string name="kontostand">Kontostand:</string>
    <string name="main_title_name">Vorname:</string>
    <string name="menu_empfaenger_neu">Neuer Empfänger</string>
    <string name="menu_empfaenger_change">Empfänger bearbeiten</string>
    <string name="menu_empfaenger_delete">Empfänger löschen</string>
    <string name="monthly">monatlich</string>
    <string name="optional">Buchungstext(Optional):</string>
    <string name="PinMoney4">Taschengeld-Einstellungen für:</string>
    <string name="receiver_edit">Empfänger</string>
    <string name="sampleDate">01.01.2000</string>
    <string name="start_date">Startdatum:</string>
    <string name="start_count">Startbetrag:</string>
    <string name="summe">Summe</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="tg_betrag">Taschengeld:</string>
    <string name="title_actual_count">Aktuell:</string>
    <string name="title_monthly">monatlich</string>
    <string name="title_weekly">wöchentlich</string>
    <string name="title_dayli">täglich</string>
    <string name="unbestaetigt">unbestätigt</string>
    <string name="verifikation">Verifikation</string>
    <string name="weekly">wöchentlich</string>
    <string name="pick">Pick</string>
    <string name="wertEingeben">Bitte Betrag eingeben!</string>
    <string name="no">No Date</string>
    <string name="cycle">Turnus</string>
    <string name="value">Wert</string>
    <string name="none">keine</string>
    <string name="noEntry">Kein Eintrag</string>
    <string name="test">Test</string>
    <string name="wrongData">Die gefundenen Daten ermöglichen kein sinvolles weiterarbeiten mit diesem Konto</string>
    <string-array name="array_name">
        <item>Eintag nicht gültig</item>
    </string-array>
</resources>
