...
           android:textAlignment="center"
           android:textSize="24sp"
           android:textColor="#000000"
           android:textStyle="bold" />

       <Spinner
           android:id="@+id/spinner4Child"
           android:layout_width="300dp"
           android:layout_height="40dp"
           android:layout_gravity="center"
           android:layout_marginTop="25dp"
           android:background="@drawable/rahmen_1"
           android:popupBackground="#e5d3c1"
...
       android:layout_height="wrap_content"
       android:inputType="textPersonName"
       android:text=""
       android:textColor="#636363"
       android:textAlignment="center"
       android:textSize="12sp"
       android:ems="10"
       android:id="@+id/explainCount" />

   <Button
       android:id="@+id/button_auszahlung"
       android:layout_width="160dp"
       android:layout_height="40dp"
...
